--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -62,11 +62,15 @@
         <img src="{% static 'shop/images/packet-1.png' %}" class="img-fluid w-50 center"> <h4><span class="badge badge-success">{{i.sp|mul:100|intdiv:i.mrp}}% off</span></h4>
           <h5 class="card-title">{{ i.name }}</h5>
         <p class="card-text"> <b>Price: Rs</b><span style="text-decoration:line-through; "> {{i.mrp}}</span> <b>{{i.sp}} </b></p>
-        <div id="{{i.p_id}}"><a class="btn btn-warning add_to_cart" data-target="{{i.p_id}}" onclick="hideCartButton({{i.p_id}})">Add to cart</a></div>
-       <button id='{{i.p_id}}minus' class='btn btn-danger minus' style="display: none;">-</button> <span id='cartvalue{{i.p_id}}' style="display: none;">  </span> <button id='{{i.p_id}}plus' class='btn btn-success plus' style="display: none;"> + </button>
+       
+        <div id="{{i.p_id}}"><a class="btn btn-warning add_to_cart" data-target="{{i.p_id}}">Add to cart</a></div>
+      
+        <button id='{{i.p_id}}minus' class='btn btn-danger minus' style="display: none;" data-target="{{i.p_id}}" onclick="reduce_cart({{i.p_id}})">-</button> <span id='cartvalue{{i.p_id}}' style="display: none;"> 0 </span> <button id='{{i.p_id}}plus' class='btn btn-success plus ' style="display: none;" onclick="increase_cart({{i.p_id}})"> + </button>
+       
       </div>
     </div>
   </div>
+  
 {%  endfor %}
        
 </div>
@@ -81,30 +85,123 @@
 {% block js %}
 
 <script>
+ 
+
+
+
   $(document).ready(function(){
-    $('.add_to_cart').on('click', function(){
-     p_id = $(this).attr('data-target')
+    update_cart()
+   
+   $('.add_to_cart').on('click', function(){
+      id = $(this).attr('data-target')
+      document.getElementById(id).style.display = 'none';
+      document.getElementById(id+'plus').style.display = 'inline';
+      document.getElementById(id+'minus').style.display = 'inline';
+      document.getElementById('cartvalue'+id).style.display = 'inline';
+      
+     
      $.ajax({
       type:'GET',
       url:'{% url 'add_to_cart' %}',
-      data:{'p_id':p_id},
+      data:{'p_id':id},
       success:function(data){
-        console.log('success')      }
+        
+       $('#cartvalue'+id).text(data);
+       update_cart()
+      }
+            
      })
+  
     })
-
+   
+     
   });
 
-  function hideCartButton(id){
-    document.getElementById(id).style.display = 'none';
-    document.getElementById(id+'plus').style.display = 'inline';
-    document.getElementById(id+'minus').style.display = 'inline';
-    document.getElementById('cartvalue'+id).style.display = 'inline';
-    document.getElementById('cartvalue'+id).innerHTML ='one';
-    
-   
 
+ 
+
+
+  function reduce_cart(id){
+    $.ajax({
+      type:'GET',
+      url:'{% url 'reduce_cart' %}',
+      data:{'p_id':id},
+      success:function(data){
+       
+       $('#cartvalue'+id).text(data);
+       if(data==0){
+
+      document.getElementById(id).style.display = 'inline';
+      document.getElementById(id+'plus').style.display = 'none';
+      document.getElementById(id+'minus').style.display = 'none';
+      document.getElementById('cartvalue'+id).style.display = 'none';
+      
+      
+
+       }
+       update_cart()
+      }
+            
+     })
+     
   }
+
+  function increase_cart(id){
+
+
+    $.ajax({
+      type:'GET',
+      url:'{% url 'increase_cart' %}',
+      data:{'p_id':id},
+      success:function(data){
+
+      
+       $('#cartvalue'+id).text(data);
+       update_cart()
+      }
+            
+     })
+      }
+function update_cart(){
+
+$.ajax({
+  type:'GET',
+  url:'{% url 'update_cart' %}',
+  success:function(data){
+    console.log('data')
+    console.log(data)
+   $('#cart').text(data);
+  }
+
+})
+}
+
+
+
+
+ /* $(document).ready(function(){
+    $('.add_to_cart').on('click', function(){
+      id = $(this).attr('data-target')
+
+    
+     
+     $.ajax({
+      type:'GET',
+      url:'{% url 'add_to_cart' %}',
+      data:{'p_id':id},
+      success:function(data){
+        console.log(data)
+        
+       $('#cartvalue'+id).text(data);
+      }
+            
+     })
+     
+    })
+    
+  });
+*/
+  
 </script>
 
 {% endblock %}
