--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -10,6 +10,13 @@
 
     <link rel="icon" type="image/png"  href="">
     <title>Shop</title>
+
+
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/simple-sidebar.css" rel="stylesheet">
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-warning">
