--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -1,96 +1,43 @@
 {% extends 'shop/base.html' %}
-{% load static %}
-{% load mathfilters %}
+{% load subtract %}
+
 {% block body %}
 
+
 <style>
-
-    .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.img-product{
+    height:400px;
+    width:400px;
 }
-
-
-
 </style>
-
-
-
-
-
-
-
-
-
-
-<div class="container my-4">
-<div id="carouselExampleFade" class="carousel slide carousel-fade " data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{% static 'shop/images/download.jpg' %}" class="d-block img-fluid w-100 h-50" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'shop/images/images.jpg' %}" class="d-block w-100 img-fluid  h-50" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'shop/images/images.png' %}" class="d-block w-100 img-fluid  h-50" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+<div class="container row my-4">
+<div class="col">
+<img src="/media/{{product.image}}" class="img-product">
 </div>
 
-
-   <div class="container card text-center">
-  <div class="card-header">
-    <h3>{{'Beverages'}}</h3>
-  </div>
-
-
-<div class="my-8">
-
-
-    <div class="row ">
-
-
-{% for i in beverages %}
-     
-  <div class="col-sm-3">
-    <div class="card">
-      <div class="card-body">
+<div class="col">
+    <h2>{{product.name}}</h2>
+    
+    <p><b>List Price: Rs <span style="text-decoration: line-through;">{{product.mrp}}</span></b></p>
+    <p><b>Price: Rs {{product.sp}}</b></p>
+    <p><b>You save: Rs {{product.mrp|subtract:product.sp}}</b></p>
+    <div>{{product.desc}}</div>
+    <div class="my-4">
+    <span class="mx-4">
         
-        <a href="{% url 'product_detail' i.p_id %}"><img src="media/{{i.image}}" class="img-fluid w-50 center"> <h4><span class="badge badge-success">{{i.sp|mul:100|intdiv:i.mrp}}% off</span></h4>
-
-          <h5 class="card-title">{{ i.name }}</h5></a>
-        <p class="card-text"> <b>Price: Rs</b><span style="text-decoration:line-through; "> {{i.mrp}}</span> <b>{{i.sp}} </b></p>
-       
-        <div id="add_to_cart{{i.p_id}}"><a class="btn btn-warning add_to_cart" data-target="{{i.p_id}}">Add to cart</a></div>
-      
-        <button id='{{i.p_id}}minus' class='btn btn-danger minus' style="display: none;" data-target="{{i.p_id}}" onclick="reduce_cart({{i.p_id}})">-</button> <span id='cartvalue{{i.p_id}}' style="display: none;"> 0 </span> <button id='{{i.p_id}}plus' class='btn btn-success plus ' style="display: none;" onclick="increase_cart({{i.p_id}})"> + </button>
-       
-      </div>
-    </div>
-  </div>
-  
-{%  endfor %}
-       
-</div>
+        <button id="add_to_cart{{product.p_id}}" class="btn btn-warning add_to_cart"   data-target="{{product.p_id}}">Add to cart</button>
+    
+        <button id='{{product.p_id}}minus' class='btn btn-danger minus' style="display: none;" data-target="{{product.p_id}}" onclick="reduce_cart({{product.p_id}})">-</button> <span id='cartvalue{{product.p_id}}' style="display: none;"> 0 </span> <button id='{{product.p_id}}plus' class='btn btn-success plus ' style="display: none;" onclick="increase_cart({{product.p_id}})"> + </button>
+    </span>
+        <a href="{% url 'cart' %}"><button class="btn btn-success">Go to cart</button></a>
     </div>
 </div>
 
-
-
+</div>
 
 {% endblock %}
+
+
 
 {% block js %}
 
@@ -100,10 +47,12 @@
   
     $(document).ready(function(){
       update_cart()     
-  
+        var tmp = {{request.session.cart.product.p_id}}
+        console.log(tmp)
   
       $('.add_to_cart').on('click', function(){
         id = $(this).attr('data-target')
+        console.log(id)
         document.getElementById('add_to_cart'+id).style.display = 'none';
         document.getElementById(id+'plus').style.display = 'inline';
         document.getElementById(id+'minus').style.display = 'inline';
@@ -188,8 +137,9 @@
       console.log('data')
       console.log(data)
      $('#cart').text(data);
+     
     }
-  
+    
   })
   }
   
@@ -299,5 +249,3 @@
   </script>
 
 {% endblock %}
-
-
