--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -11,6 +11,11 @@
   margin-right: auto;
   width: 50%;
 }
+.viewmore
+{
+  text-align: right;
+  t
+}
 
 
 
@@ -18,76 +23,118 @@
 
 
 
+<div class="d-flex my-4" id="wrapper">
 
+  <!-- Sidebar -->
+  {% include 'shop/sidebar.html' %}
+  <!-- /#sidebar-wrapper -->
 
+  <!-- Page Content -->
+  <div id="page-content-wrapper" class="col">
 
-
-
-
-
-<div class="container my-4">
-<div id="carouselExampleFade" class="carousel slide carousel-fade " data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{% static 'shop/images/download.jpg' %}" class="d-block img-fluid w-100 h-50" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'shop/images/images.jpg' %}" class="d-block w-100 img-fluid  h-50" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'shop/images/images.png' %}" class="d-block w-100 img-fluid  h-50" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div>
-
-
-   <div class="container card text-center">
-  <div class="card-header">
-    <h3>{{'Beverages'}}</h3>
-  </div>
-
-
-<div class="my-8">
-
-
-    <div class="row ">
-
-
-{% for i in beverages %}
-     
-  <div class="col-sm-3">
-    <div class="card">
-      <div class="card-body">
-        
-        <a href="{% url 'product_detail' i.p_id %}"><img src="media/{{i.image}}" class="img-fluid w-50 center"> <h4><span class="badge badge-success">{{i.sp|mul:100|intdiv:i.mrp}}% off</span></h4>
-
-          <h5 class="card-title">{{ i.name }}</h5></a>
-        <p class="card-text"> <b>Price: Rs</b><span style="text-decoration:line-through; "> {{i.mrp}}</span> <b>{{i.sp}} </b></p>
-       
-        <div id="add_to_cart{{i.p_id}}"><a class="btn btn-warning add_to_cart" data-target="{{i.p_id}}">Add to cart</a></div>
+    
       
-        <button id='{{i.p_id}}minus' class='btn btn-danger minus' style="display: none;" data-target="{{i.p_id}}" onclick="reduce_cart({{i.p_id}})">-</button> <span id='cartvalue{{i.p_id}}' style="display: none;"> 0 </span> <button id='{{i.p_id}}plus' class='btn btn-success plus ' style="display: none;" onclick="increase_cart({{i.p_id}})"> + </button>
-       
+      
+      
+<div class="card text-center">
+           
+        <div class="card-header">
+          
+            <h3>{{'Beverages'}}  <span class="viewmore"><a class="btn btn-warning">View all</a></span></h3>
+           
+          
+        </div>
+      
+      
+      <div class="my-8">
+      
+      
+          <div class="row ">
+      
+      
+      {% for i in beverages %}
+           
+        <div class="col-sm-3">
+          <div class="card">
+            <div class="card-body">
+              
+              <a href="{% url 'product_detail' i.p_id %}"><img src="media/{{i.image}}" class="img-fluid w-50 center"> <h4><span class="badge badge-success">{{i.sp|mul:100|intdiv:i.mrp}}% off</span></h4>
+      
+                <h5 class="card-title">{{ i.name }}</h5></a>
+              <p class="card-text"> <b>Price: Rs</b><span style="text-decoration:line-through; "> {{i.mrp}}</span> <b>{{i.sp}} </b></p>
+             
+              <div id="add_to_cart{{i.p_id}}"><a class="btn btn-warning add_to_cart" data-target="{{i.p_id}}">Add to cart</a></div>
+            
+              <button id='{{i.p_id}}minus' class='btn btn-danger minus' style="display: none;" data-target="{{i.p_id}}" onclick="reduce_cart({{i.p_id}})">-</button> <span id='cartvalue{{i.p_id}}' style="display: none;"> 0 </span> <button id='{{i.p_id}}plus' class='btn btn-success plus ' style="display: none;" onclick="increase_cart({{i.p_id}})"> + </button>
+             
+            </div>
+          </div>
+        </div>
+        
+      {%  endfor %}
+
+
+
+      
+
+
+          <div class="card text-center my-4">
+           
+            <div class="card-header">
+              
+                <h3>{{'Beverages'}}  <span class="viewmore"><a class="btn btn-warning">View all</a></span></h3>
+               
+              
+            </div>
+          
+          
+          <div class="my-8">
+          
+          
+              <div class="row ">
+          
+          
+          {% for i in beverages %}
+               
+            <div class="col-sm-3">
+              <div class="card">
+                <div class="card-body">
+                  
+                  <a href="{% url 'product_detail' i.p_id %}"><img src="media/{{i.image}}" class="img-fluid w-50 center"> <h4><span class="badge badge-success">{{i.sp|mul:100|intdiv:i.mrp}}% off</span></h4>
+          
+                    <h5 class="card-title">{{ i.name }}</h5></a>
+                  <p class="card-text"> <b>Price: Rs</b><span style="text-decoration:line-through; "> {{i.mrp}}</span> <b>{{i.sp}} </b></p>
+                 
+                  <div id="add_to_cart{{i.p_id}}"><a class="btn btn-warning add_to_cart" data-target="{{i.p_id}}">Add to cart</a></div>
+                
+                  <button id='{{i.p_id}}minus' class='btn btn-danger minus' style="display: none;" data-target="{{i.p_id}}" onclick="reduce_cart({{i.p_id}})">-</button> <span id='cartvalue{{i.p_id}}' style="display: none;"> 0 </span> <button id='{{i.p_id}}plus' class='btn btn-success plus ' style="display: none;" onclick="increase_cart({{i.p_id}})"> + </button>
+                 
+                </div>
+              </div>
+            </div>
+            
+          {%  endfor %}
+    
+             
       </div>
-    </div>
-  </div>
-  
-{%  endfor %}
-       
-</div>
-    </div>
-</div>
+          </div>
 
 
+
+
+
+      </div>
+      
+    </div>
+
+
+
+
+
+
+
+    
+</div>
 
 
 {% endblock %}
@@ -95,7 +142,9 @@
 {% block js %}
 
 <script>
- 
+
+   
+   
  
   
     $(document).ready(function(){
