Sidebar toggle issue resolved, search bar implemented outside of navbar, next task is to implement order_detail page

--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -140,6 +140,13 @@
 
 <script>
  
+
+ $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
+
+
 $('#nextbtn').on('click', function(){
   document.getElementById('address').style.display = 'inline'
   document.getElementById('nextbtn').style.display = 'None'
