--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -55,7 +55,10 @@
 {% block js %}
 
 <script>
- 
+ $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
  
   
     $(document).ready(function(){
