--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -12,15 +12,18 @@
     <title>Shop</title>
 
 
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'shop/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="{% static 'css/simple-sidebar.css' %}" rel="stylesheet">
+  <link href="{% static 'shop/css/simple-sidebar.css' %}" rel="stylesheet">
 
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-warning">
   <a class="navbar-brand" href="{% url 'home' %}">Grocease</a>
+    <a class="nav-link" href="{% url 'home' %}" id='menu-toggle'>Categories 
+      </a>
+  </li>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,6 +33,8 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
       </li>
+      
+
         {% if user.is_authenticated %}
 
         
@@ -89,14 +94,14 @@
 </button></a>
 </button>
 
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    
   </div>
 </nav>
 
-
+<form class="form-inline my-2 0">
+  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="width: 90%;">
+  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+</form>
 
 {% block body %}{% endblock %}
 
