--- a/shop/templates/shop/category.html
+++ b/shop/templates/shop/category.html
@@ -287,7 +287,10 @@
   
   }
   
-  
+  $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
   
   
      
