--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -49,7 +49,7 @@
       <div class="my-8">
       
       
-          <div class="row ">
+          <div class="row">
       
       
       {% for i in beverages %}
@@ -143,13 +143,16 @@
 
 <script>
 
-   
+$("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
    
  
   
     $(document).ready(function(){
       update_cart()     
-  
+      $("#wrapper").toggleClass("toggled");
   
       $('.add_to_cart').on('click', function(){
         id = $(this).attr('data-target')
