--- a/shop/templates/shop/sidebar.html
+++ b/shop/templates/shop/sidebar.html
@@ -1,7 +1,8 @@
 <div class="bg-light border-right col-sm-2" id="sidebar-wrapper">
+  
     <div class="sidebar-heading"></div>
     {% for cat in category %}
-    <div class="list-group list-group-flush">
+    <div class="list-group list-group-flush col-sm-2">
        
       <a href="{% url 'category' cat.cat_id %}" class="list-group-item list-group-item-action bg-light">{{cat.name}}</a>
      
