order detail page completed next step is to send otp via email for registration

--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -108,7 +108,7 @@
       <label for="inputState">State</label>
       <select id="inputState" class="form-control" name="state">
         <option selected>Choose...</option>
-        <option>Uttar Pradesh</option>
+        <option value="Uttar Pradesh"></option>
         <option>Delhi</option>
         <option>Himachal Pradesh</option>
         <option>Kerala</option>
