--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -98,7 +98,7 @@
   </div>
 </nav>
 
-<form class="form-inline my-2 0">
+<form class="form-inline my-2 mx-4">
   <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="width: 90%;">
   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 </form>
