--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -36,7 +36,7 @@
       
       
       
-<div class="card text-center">
+<div class="card text-center mx-4">
            
         <div class="card-header">
           
@@ -78,7 +78,7 @@
       
 
 
-          <div class="card text-center my-4">
+          <div class="card text-center my-4 mx-4">
            
             <div class="card-header">
               
