--- a/shop/templates/shop/signup.html
+++ b/shop/templates/shop/signup.html
@@ -1,4 +1,4 @@
-{% extends 'shop/base.html ' %}
+{% extends 'shop/base.html' %}
 {% block body %}
 <form method="POST">
     {% csrf_token %}
@@ -40,11 +40,51 @@
     <label for="inputAddress2"> Confirm Password</label>
     <input type="text" class="form-control" id="inputAddress2" placeholder=" Confirm your password" name="confirm_password">
   </div>
+  <div class="form-group">
+    <label for="inputAddress2">OTP </label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder=" Enter OTP" name="otp" id="otp" style="display: none;">
+  </div>
+  <div class="row justify-content-center mt-5">
+    <div class="col-md-2">
+<button type="button" class="btn btn-primary btn-block btn-lg" id="verify" style="display: inline;">Verify</button>
+    </div>
+    </div>
+
+
         <div class="row justify-content-center mt-5">
         <div class="col-md-2">
-  <button type="submit" class="btn btn-primary btn-block btn-lg">Sign in</button>
+  <button type="submit" class="btn btn-primary btn-block btn-lg" id="submit" style="display: none;">Sign in</button>
         </div>
         </div>
+
     </div>
 </form>
+
+{% endblock %}
+
+{% block js %}
+
+<script>
+  $('#verify').on('click', function(){
+        id = $(this).attr('id')
+        console.log(id)
+        
+        
+       
+       $.ajax({
+        type:'GET',
+        url:'{% url 'add_to_cart' %}',
+        data:{'p_id':id},
+        success:function(data){
+          
+         $('#cartvalue'+id).text(data);
+         update_cart()
+        }
+              
+       })
+    
+      })
+     
+</script>
+
 {% endblock %}
